Fix heading spacing

--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ h2 {
 }
 h3 {
 	font-size: 1.5rem;
-	margin-bottom: 1.5rem;
+	margin-bottom: 0.5rem;
 }
 p {
 	font-size: 1.2rem;
@@ -96,6 +96,11 @@ input#submit,
 }
 * + h2 {
 	margin-top: 4rem;
+}
+* + h3,
+* + h4,
+* + h5 {
+    margin-top: 3rem;
 }
 ul {
 	margin: 2rem 0;
